Tried to make a functioning My Items screen

--- a/MainMenu/app/src/main/res/values/colors.xml
+++ b/MainMenu/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="HRRed">#CC0033</color>
     <color name="White">#FFFFFF</color>
     <color name="Black">#000000</color>
+    <color name="Gray">#A8A8A8</color>
 </resources>
