--- a/MainMenu/app/src/main/res/layout/rowlayout.xml
+++ b/MainMenu/app/src/main/res/layout/rowlayout.xml
@@ -12,6 +12,7 @@
 
 
     <LinearLayout
+        android:id="@+id/row_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
