--- a/MainMenu/app/src/main/res/layout/activity_main_admin.xml
+++ b/MainMenu/app/src/main/res/layout/activity_main_admin.xml
@@ -88,22 +88,6 @@
         app:layout_constraintWidth_percent="0.34" />
 
     <Button
-        android:id="@+id/usr_settings_btn2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:text="@string/Profile_Button"
-        android:background="@color/White"
-        android:textColor="@color/Black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.775"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75"
-        app:layout_constraintHeight_percent="0.08"
-        app:layout_constraintWidth_percent="0.34" />
-
-    <Button
         android:id="@+id/logout_btn2"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -120,7 +104,39 @@
         app:layout_constraintWidth_percent="0.5" />
 
     <Button
-        android:id="@+id/logout_btn3"
+        android:id="@+id/usr_settings_btn2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/White"
+        android:text="@string/Profile_Button"
+        android:textColor="@color/Black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintHorizontal_bias="0.775"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.75"
+        app:layout_constraintWidth_percent="0.34" />
+
+    <Button
+        android:id="@+id/statistics_btn"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/White"
+        android:text="Statistics"
+        android:textColor="@color/Black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.230"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.85"
+        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintWidth_percent="0.34" />
+
+    <Button
+        android:id="@+id/statistics_btn2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/White"
@@ -128,11 +144,27 @@
         android:textColor="@color/Black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.08"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.230"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.85"
-        app:layout_constraintWidth_percent="0.5" />
+        app:layout_constraintWidth_percent="0.34" />
+
+    <Button
+        android:id="@+id/create_item_btn_2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/White"
+        android:text="Create Item"
+        android:textColor="@color/Black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintHorizontal_bias="0.775"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.85"
+        app:layout_constraintWidth_percent="0.34" />
 
 </android.support.constraint.ConstraintLayout>
