--- a/MainMenu/app/src/main/res/layout/resrowlayout.xml
+++ b/MainMenu/app/src/main/res/layout/resrowlayout.xml
@@ -12,6 +12,7 @@
 
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/resrowlayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         xmlns:android="http://schemas.android.com/apk/res/android"
