--- a/MainMenu/app/src/main/res/layout/activity_main_admin.xml
+++ b/MainMenu/app/src/main/res/layout/activity_main_admin.xml
@@ -9,7 +9,7 @@
     android:background="#cc0033">
 
     <ImageView
-        android:id="@+id/hrlogo"
+        android:id="@+id/hrlogo2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:contentDescription="@string/Logo_Desc"
@@ -24,7 +24,7 @@
         app:layout_constraintWidth_percent="0.7" />
 
     <Button
-        android:id="@+id/inventory_btn"
+        android:id="@+id/inventory_btn2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="@string/Inventory_Button"
@@ -40,7 +40,7 @@
         app:layout_constraintWidth_percent="0.7" />
 
     <Button
-        android:id="@+id/usr_reserve_btn"
+        android:id="@+id/usr_reserve_btn2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="@string/Reserve_Button"
@@ -56,7 +56,7 @@
         app:layout_constraintWidth_percent="0.7" />
 
     <Button
-        android:id="@+id/usr_items_btn"
+        android:id="@+id/usr_items_btn2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="@string/My_Items_Button"
@@ -72,7 +72,7 @@
         app:layout_constraintWidth_percent="0.7" />
 
     <Button
-        android:id="@+id/tos_btn"
+        android:id="@+id/tos_btn2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="@string/ToS_Button"
@@ -88,23 +88,7 @@
         app:layout_constraintWidth_percent="0.34" />
 
     <Button
-        android:id="@+id/usr_settings_btn"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:text="@string/Profile_Button"
-        android:background="@color/White"
-        android:textColor="@color/Black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.775"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75"
-        app:layout_constraintHeight_percent="0.08"
-        app:layout_constraintWidth_percent="0.34" />
-
-    <Button
-        android:id="@+id/logout_btn"
+        android:id="@+id/logout_btn2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="@string/Log_Out_Button"
@@ -115,8 +99,72 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.9"
+        app:layout_constraintVertical_bias="0.95"
         app:layout_constraintHeight_percent="0.08"
         app:layout_constraintWidth_percent="0.5" />
+
+    <Button
+        android:id="@+id/usr_settings_btn2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/White"
+        android:text="@string/Profile_Button"
+        android:textColor="@color/Black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintHorizontal_bias="0.775"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.75"
+        app:layout_constraintWidth_percent="0.34" />
+
+    <Button
+        android:id="@+id/statistics_btn"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/White"
+        android:text="Statistics"
+        android:textColor="@color/Black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.230"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.85"
+        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintWidth_percent="0.34" />
+
+    <Button
+        android:id="@+id/statistics_btn2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/White"
+        android:text="Statistics"
+        android:textColor="@color/Black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintHorizontal_bias="0.230"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.85"
+        app:layout_constraintWidth_percent="0.34" />
+
+    <Button
+        android:id="@+id/create_item_btn_2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/White"
+        android:text="Create Item"
+        android:textColor="@color/Black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintHorizontal_bias="0.775"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.85"
+        app:layout_constraintWidth_percent="0.34" />
 
 </android.support.constraint.ConstraintLayout>
