--- a/MainMenu/app/src/main/res/layout/rowlayout.xml
+++ b/MainMenu/app/src/main/res/layout/rowlayout.xml
@@ -36,10 +36,10 @@
             android:textSize="15sp" />
 
         <TextView
-            android:id="@+id/prodid"
+            android:id="@+id/stock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="prodid"
+            android:text="stock"
             android:textColor="#000000"
             android:textSize="15sp" />
     </LinearLayout>
