--- a/MainMenu/app/src/main/res/layout/reserve_item.xml
+++ b/MainMenu/app/src/main/res/layout/reserve_item.xml
@@ -80,14 +80,14 @@
             android:id="@+id/reserve_confirm"
             android:layout_width="175dp"
             android:layout_height="60dp"
-            android:text="@string/Confirmsel_Button"
             android:background="@color/White"
+            android:text="@string/Confirmsel_Button"
             android:textColor="@color/Black"
-            app:layout_constraintHorizontal_bias="0.915"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintVertical_bias="0.48" />
 
     </android.support.constraint.ConstraintLayout>
 
