--- a/MainMenu/app/src/main/res/layout/reserveuserlist.xml
+++ b/MainMenu/app/src/main/res/layout/reserveuserlist.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#cc0033"
-    tools:context="com.example.mainmenu.Inventory">
+    tools:context="com.example.mainmenu.ReserveUserlist">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/TopofScreen"
@@ -22,16 +22,16 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
-            android:id="@+id/mitems_header"
+            android:id="@+id/resul_header"
             android:layout_width="350dp"
             android:layout_height="50dp"
-            android:text="@string/Res_Header"
+            android:text="@string/RUL_Header"
             android:textAlignment="center"
-            android:textSize="25dp"
+            android:textSize="30dp"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintVertical_bias="0.06"
+            app:layout_constraintVertical_bias="0.05"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -41,41 +41,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="#ffffff"
-            app:layout_constraintHeight_percent="0.4"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintVertical_bias="0.2"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/mitems_header2"
-            android:layout_width="350dp"
-            android:layout_height="50dp"
-            android:text="@string/Borrow_Header"
-            android:textAlignment="center"
-            android:textSize="25dp"
-            android:textStyle="bold"
-            android:textColor="#FFFFFF"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintVertical_bias="0.58"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="#ffffff"
-            app:layout_constraintHeight_percent="0.4"
+            app:layout_constraintHeight_percent="0.85"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintVertical_bias="1"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -84,7 +50,7 @@
             app:layout_constraintBottom_toBottomOf="parent">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView3"
+                android:id="@+id/recyclerView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
         </RelativeLayout>
@@ -98,7 +64,7 @@
         app:layout_constraintTop_toBottomOf="@id/TopofScreen">
 
         <Button
-            android:id="@+id/mitems_backtomenu_btn"
+            android:id="@+id/rul_backtomenu_btn"
             android:layout_width="250dp"
             android:layout_height="60dp"
             android:text="@string/BackToMenu_Button"
