--- a/MainMenu/app/src/main/res/layout/activity_main_admin.xml
+++ b/MainMenu/app/src/main/res/layout/activity_main_admin.xml
@@ -27,64 +27,68 @@
         android:id="@+id/inventory_btn2"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@drawable/rounded_corner"
         android:text="@string/Inventory_Button"
-        android:background="@color/White"
         android:textColor="@color/Black"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.45"
-        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintWidth_percent="0.7" />
 
     <Button
         android:id="@+id/usr_reserve_btn2"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@drawable/rounded_corner"
         android:text="@string/Reserve_Button"
-        android:background="@color/White"
         android:textColor="@color/Black"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.55"
-        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintWidth_percent="0.7" />
 
     <Button
         android:id="@+id/usr_items_btn2"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@drawable/rounded_corner"
         android:text="@string/My_Items_Button"
-        android:background="@color/White"
         android:textColor="@color/Black"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.65"
-        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintWidth_percent="0.7" />
 
     <Button
         android:id="@+id/tos_btn2"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@drawable/rounded_corner"
         android:text="@string/ToS_Button"
-        android:background="@color/White"
         android:textColor="@color/Black"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintHorizontal_bias="0.230"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.75"
-        app:layout_constraintHeight_percent="0.08"
         app:layout_constraintWidth_percent="0.34" />
 
     <Button
@@ -92,7 +96,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="@string/Log_Out_Button"
-        android:background="@color/White"
+        android:background="@drawable/rounded_corner"
         android:textColor="@color/Black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -107,9 +111,10 @@
         android:id="@+id/usr_settings_btn2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/White"
+        android:background="@drawable/rounded_corner"
         android:text="@string/Profile_Button"
         android:textColor="@color/Black"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.08"
         app:layout_constraintHorizontal_bias="0.775"
@@ -123,7 +128,7 @@
         android:id="@+id/statistics_btn"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/White"
+        android:background="@drawable/rounded_corner"
         android:text="Statistics"
         android:textColor="@color/Black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -139,9 +144,10 @@
         android:id="@+id/statistics_btn2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/White"
+        android:background="@drawable/rounded_corner"
         android:text="Statistics"
         android:textColor="@color/Black"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.08"
         app:layout_constraintHorizontal_bias="0.230"
@@ -155,9 +161,10 @@
         android:id="@+id/create_item_btn_2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/White"
+        android:background="@drawable/rounded_corner"
         android:text="Create Item"
         android:textColor="@color/Black"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.08"
         app:layout_constraintHorizontal_bias="0.775"
