--- a/MainMenu/app/src/main/res/layout/activity_register.xml
+++ b/MainMenu/app/src/main/res/layout/activity_register.xml
@@ -144,6 +144,7 @@
         android:id="@+id/btnRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/rounded_corner"
         android:text="Register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.065"
