--- a/MainMenu/app/src/main/res/layout/info_content.xml
+++ b/MainMenu/app/src/main/res/layout/info_content.xml
@@ -85,7 +85,7 @@
         android:layout_height="0dp"
         app:layout_constraintHeight_percent="0.08"
         android:text="Reserve Item"
-        android:background="@color/White"
+        android:background="@drawable/rounded_corner"
         android:textColor="@color/Black"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintVertical_bias="0.9"
