--- a/MainMenu/app/src/main/res/layout/login_activity.xml
+++ b/MainMenu/app/src/main/res/layout/login_activity.xml
@@ -51,8 +51,8 @@
         android:id="@+id/btnLogin"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@drawable/rounded_corner"
         android:text="@string/Login"
-        android:background="#ffffff"
         android:textColor="@color/Black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.075"
