--- a/MainMenu/app/src/main/res/layout/ruluser.xml
+++ b/MainMenu/app/src/main/res/layout/ruluser.xml
@@ -12,7 +12,7 @@
         android:id="@+id/TopofScreen"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.85"
+        app:layout_constraintHeight_percent="0.95"
         app:layout_constraintWidth_percent="0.9"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintVertical_bias="0"
@@ -31,7 +31,7 @@
             android:textStyle="bold"
             android:textColor="#FFFFFF"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintVertical_bias="0.04"
+            app:layout_constraintVertical_bias="0.05"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -39,16 +39,17 @@
 
         <TextView
             android:id="@+id/mitems_header"
-            android:layout_width="200dp"
+            android:layout_width="350dp"
             android:layout_height="50dp"
             android:text="@string/Res_Header"
             android:textAlignment="center"
-            android:textSize="20dp"
+            android:textSize="22dp"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
-            app:layout_constraintHorizontal_bias="0.2"
-            app:layout_constraintVertical_bias="0.1"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintVertical_bias="0.18"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
 
@@ -58,12 +59,12 @@
             android:layout_height="0dp"
             android:background="#ffffff"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHeight_percent="0.4"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHeight_percent="0.35"
+            app:layout_constraintHorizontal_bias="0.7"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.25">
+            app:layout_constraintVertical_bias="0.35">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView6"
@@ -73,15 +74,15 @@
 
         <TextView
             android:id="@+id/mitems_header2"
-            android:layout_width="200dp"
+            android:layout_width="350dp"
             android:layout_height="50dp"
             android:text="@string/Borrow_Header"
             android:textAlignment="center"
-            android:textSize="20dp"
+            android:textSize="22dp"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
-            app:layout_constraintHorizontal_bias="0.2"
-            app:layout_constraintVertical_bias="0.6"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintVertical_bias="0.65"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -91,7 +92,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="#ffffff"
-            app:layout_constraintHeight_percent="0.4"
+            app:layout_constraintHeight_percent="0.35"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintVertical_bias="1"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -107,28 +108,18 @@
 
         <Spinner
             android:id="@+id/RoleSpn"
-            android:layout_width="160dp"
+            android:layout_width="200dp"
             android:layout_height="45dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="0dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.98"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.071" />
+            app:layout_constraintVertical_bias="0.1" />
 
     </android.support.constraint.ConstraintLayout>
-
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.15"
-        app:layout_constraintTop_toBottomOf="@id/TopofScreen"/>
-
-
 </android.support.constraint.ConstraintLayout>
